k8s/deployment_shoppingmall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingmall
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingmall
  template:
    metadata:
      labels:
        app: shoppingmall
    spec:
      containers:
        - name: shoppingmall
          #image: localhost:5000/shoppingmall:latest
          image: ghcr.io/kimcheonki/shoppingmall:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
