k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingmall
spec:
  type: LoadBalancer
  selector:
    app: shoppingmall
  ports:
    - name : http 
      protocol: TCP
      port: 80
      targetPort: 8080
    - name : https 
      protocol: TCP
      port: 443
      targetPort: 8080
