k8s/ingress_shoppingmall.com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingmall-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shoppingmall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoppingmall-service
            port:
              number: 80
